# bone-voyage

./: .gitignore  README.md  pyproject.toml
docs/: PARITY.md  index.html
docs/assets/: app.js  styles.css
scripts/: install-engine.sh  start-engine.sh
src/opengem/: __init__.py  cli.py
src/opengem/api/: app.py  jobs.py  pipeline.py  session.py  workspace.py
src/opengem/core/: __init__.py  bones.py  density.py  export.py  image_io.py  material.py  matmap_xml.py  region_grow.py  segment.py  surface.py  volume.py
src/opengem/web/: index.html
src/opengem/web/assets/: app.js  styles.css
tests/: test_bones_split.py  test_density.py  test_pipeline_synthetic.py  test_tetra_to_quad.py
