[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengem"
version = "0.1.0"
description = "Bone Voyage / OpenGEM — CT to FE models (local web app)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "OpenGEM contributors" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "SimpleITK>=2.3",
  "vtk>=9.2",
  "meshio>=5.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
  "pydantic>=2.5",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
maxflow = ["PyMaxflow>=1.3"]

[project.scripts]
opengem = "opengem.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opengem.web" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
